@startuml
title Factory Method - Return Processing

skinparam classAttributeIconSize 0

interface IReturnProcessor {
    +ProcessReturn(orderNumber : string, productName : string) : string
}

class RefundReturnProcessor {
    +ProcessReturn(orderNumber : string, productName : string) : string
}

class SizeExchangeReturnProcessor {
    +ProcessReturn(orderNumber : string, productName : string) : string
}

class DefectiveProductReturnProcessor {
    +ProcessReturn(orderNumber : string, productName : string) : string
}

abstract class ReturnProcessorFactory {
    +CreateProcessor() : IReturnProcessor
    +HandleReturn(orderNumber : string, productName : string) : string
}

class RefundReturnFactory {
    +CreateProcessor() : IReturnProcessor
}

class SizeExchangeReturnFactory {
    +CreateProcessor() : IReturnProcessor
}

class DefectiveProductReturnFactory {
    +CreateProcessor() : IReturnProcessor
}

class StoreController {
    +FactoryMethod() : IActionResult
    +FactoryMethod(orderNumber : string, productName : string, returnType : string) : IActionResult
    -CreateReturnProcessorFactory(returnType : string) : ReturnProcessorFactory
    -ConfigureFactoryMethodViewData(...) : void
}

IReturnProcessor <|.. RefundReturnProcessor
IReturnProcessor <|.. SizeExchangeReturnProcessor
IReturnProcessor <|.. DefectiveProductReturnProcessor

ReturnProcessorFactory <|-- RefundReturnFactory
ReturnProcessorFactory <|-- SizeExchangeReturnFactory
ReturnProcessorFactory <|-- DefectiveProductReturnFactory

RefundReturnFactory ..> RefundReturnProcessor : creates
SizeExchangeReturnFactory ..> SizeExchangeReturnProcessor : creates
DefectiveProductReturnFactory ..> DefectiveProductReturnProcessor : creates

ReturnProcessorFactory --> IReturnProcessor
StoreController --> ReturnProcessorFactory

@enduml